[package]
name = "lumix-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
ureq = { version = "2.12", default-features = false }
v4l = "0.14"
